fix text overflow

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -102,7 +102,7 @@ ul {
 
 li {
     display: inline-block;
-    padding: 0 0 0 1rem;
+    padding: 0 1rem;
 }
 /** main **/
 
@@ -134,6 +134,7 @@ main {
 .thesis {
     padding: 2rem 1.5rem;
     height: auto;
+    min-height: 100%
 }
 
 .thesis h2 {
@@ -143,7 +144,6 @@ main {
 video {
     width: 100%;
     height: auto;
-    padding: 0 0 1.5rem 0;
 }
 
 
@@ -158,24 +158,18 @@ footer h4 {
     display: inline-block;
 }
 
-footer ul {
-    display: inline-block;
-    right: 0px;
-}
 
 /** media query **/
 @media only screen and (min-width: 799px) {
     .mobile {
         display: none;
-        overflow: hidden;
+
     }
 
     .pc {
         display: block;
-        overflow: hidden;
     }
 
-    
     /** section banner **/
     .banner {
         height: auto;
@@ -235,7 +229,6 @@ footer ul {
 
     .main {
         display: inline-grid;
-
     }
     .main img {
         max-width: 100%;
@@ -327,14 +320,18 @@ footer ul {
 
     .thesis {
         background-color: #fafafa;
-        height: auto;
         padding-bottom: 2rem;
     }
 
     .sixty-grid {
         display: grid;
         grid-template-columns: 60% 40%;
-        grid-gap: 0 1.5rem;
+        grid-gap: 2rem 1.5rem;
+    }
+
+    .thesis .container {
+        margin-top: 1.5rem;
+        margin-bottom: 2rem;
     }
 
     .left-right {
@@ -342,10 +339,12 @@ footer ul {
         grid-template-columns: 35% 65%;
     }
 
+    /** footer **/
+
     footer {
         display: inline-flex;
         background-color: #fafafa;
-        height: 5rem;
+        height: 4rem;
         width: 100%;
         color: grey;
         align-items: center;
@@ -354,7 +353,11 @@ footer ul {
         justify-content: space-between;
         position: relative;
         bottom: 0;
-        clear: both;
+
+    }
+
+    footer ul {
+        display: inline-block;
     }
 }
 
@@ -363,12 +366,10 @@ footer ul {
         display: inline-block;
         vertical-align: middle;
         display: inline-block;
-        overflow: hidden;
     }
 
     .pc, #pc {
         display: none;
-        overflow: hidden;
     }
 
     body {
